analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DATETIME
    DOUBLE
    FINAL
    INT
    NUEVA_LINEA
    PALABRA_CLAVE_ALTER
    PALABRA_CLAVE_AND
    PALABRA_CLAVE_AS
    PALABRA_CLAVE_ASC
    PALABRA_CLAVE_BETWEEN
    PALABRA_CLAVE_CREATE
    PALABRA_CLAVE_DATABASE
    PALABRA_CLAVE_DELETE
    PALABRA_CLAVE_DESC
    PALABRA_CLAVE_DROP
    PALABRA_CLAVE_EXISTS
    PALABRA_CLAVE_FOREIGN
    PALABRA_CLAVE_FULL
    PALABRA_CLAVE_HAVING
    PALABRA_CLAVE_IN
    PALABRA_CLAVE_INNER
    PALABRA_CLAVE_INSERT
    PALABRA_CLAVE_INTO
    PALABRA_CLAVE_JOIN
    PALABRA_CLAVE_KEY
    PALABRA_CLAVE_LEFT
    PALABRA_CLAVE_LIKE
    PALABRA_CLAVE_LIMIT
    PALABRA_CLAVE_NOT
    PALABRA_CLAVE_NULL
    PALABRA_CLAVE_ON
    PALABRA_CLAVE_PRIMARY
    PALABRA_CLAVE_RIGHT
    PALABRA_CLAVE_SET
    PALABRA_CLAVE_TABLE
    PALABRA_CLAVE_TRUNCATE
    PALABRA_CLAVE_UNION
    PALABRA_CLAVE_UPDATE
    PALABRA_CLAVE_USE
    PALABRA_CLAVE_VALUES
    TEXT
    TIMESTAMP
    TINYINT
    TIPO_DATO
    VARCHAR

Grammar

Rule 0     S' -> Inicio_consultas
Rule 1     Inicio_consultas -> PALABRA_CLAVE_SELECT select_individual
Rule 2     Inicio_consultas -> PALABRA_CLAVE_SELECT select_individual_funciones
Rule 3     Inicio_consultas -> PALABRA_CLAVE_SELECT select_intermedio PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_WHERE where
Rule 4     Inicio_consultas -> PALABRA_CLAVE_SELECT select_intermedio_funciones PALABRA_CLAVE_FROM from_individual
Rule 5     Inicio_consultas -> PALABRA_CLAVE_SELECT select_intermedio PALABRA_CLAVE_FROM from_individual
Rule 6     Inicio_consultas -> PALABRA_CLAVE_SELECT select_finales_funciones PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_GROUP_BY datos_groupby
Rule 7     Inicio_consultas -> PALABRA_CLAVE_SELECT select_finales_funciones PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_WHERE where PALABRA_CLAVE_GROUP_BY datos_groupby
Rule 8     select_intermedio -> columnas
Rule 9     valores -> DATE
Rule 10    valores -> NUMERO_ENTERO
Rule 11    valores -> NUMERO_DECIMAL
Rule 12    valores -> CADENA
Rule 13    columnas -> ID
Rule 14    columnas -> valores
Rule 15    columnas -> ID COMA columnas
Rule 16    columnas -> valores COMA columnas
Rule 17    columnas -> ID OPERADOR ID
Rule 18    columnas -> ID OPERADOR valores
Rule 19    columnas -> valores OPERADOR valores
Rule 20    columnas -> valores OPERADOR ID
Rule 21    columnas -> ID OPERADOR ID COMA columnas
Rule 22    columnas -> ID OPERADOR valores COMA columnas
Rule 23    columnas -> valores OPERADOR valores COMA columnas
Rule 24    columnas -> valores OPERADOR ID COMA columnas
Rule 25    datos_groupby -> INFO
Rule 26    INFO -> ID
Rule 27    INFO -> ID COMA INFO
Rule 28    select_individual_funciones -> Funcion_agregada_individual
Rule 29    Funcion_agregada_individual -> PALABRA_CLAVE_AVG PAR_IZQ expresion_individual PAR_DER
Rule 30    Funcion_agregada_individual -> PALABRA_CLAVE_MAX PAR_IZQ expresion_individual PAR_DER
Rule 31    Funcion_agregada_individual -> PALABRA_CLAVE_MIN PAR_IZQ expresion_individual PAR_DER
Rule 32    Funcion_agregada_individual -> PALABRA_CLAVE_COUNT PAR_IZQ expresion_individual PAR_DER
Rule 33    Funcion_agregada_individual -> PALABRA_CLAVE_SUM PAR_IZQ expresion_individual PAR_DER
Rule 34    expresion_individual -> valores_funciones
Rule 35    expresion_individual -> valores_funciones OPERADOR expresion_individual
Rule 36    valores_funciones -> NUMERO_ENTERO
Rule 37    valores_funciones -> NUMERO_DECIMAL
Rule 38    select_intermedio_funciones -> Funcion_agregada
Rule 39    Funcion_agregada -> PALABRA_CLAVE_AVG PAR_IZQ expresion PAR_DER
Rule 40    Funcion_agregada -> PALABRA_CLAVE_MAX PAR_IZQ expresion PAR_DER
Rule 41    Funcion_agregada -> PALABRA_CLAVE_MIN PAR_IZQ expresion PAR_DER
Rule 42    Funcion_agregada -> PALABRA_CLAVE_COUNT PAR_IZQ expresion PAR_DER
Rule 43    Funcion_agregada -> PALABRA_CLAVE_SUM PAR_IZQ expresion PAR_DER
Rule 44    expresion -> ID
Rule 45    expresion -> valores_funciones
Rule 46    expresion -> ID OPERADOR expresion
Rule 47    expresion -> valores_funciones OPERADOR expresion
Rule 48    select_finales_funciones -> ID COMA select_finales_funciones
Rule 49    select_finales_funciones -> valores COMA select_finales_funciones
Rule 50    select_finales_funciones -> Funcion_agregada COMA select_finales_funciones
Rule 51    select_finales_funciones -> ID
Rule 52    select_finales_funciones -> valores
Rule 53    select_finales_funciones -> Funcion_agregada
Rule 54    Funcion_agregada_final -> PALABRA_CLAVE_AVG PAR_IZQ expresion_final PAR_DER
Rule 55    Funcion_agregada_final -> PALABRA_CLAVE_MAX PAR_IZQ expresion_final PAR_DER
Rule 56    Funcion_agregada_final -> PALABRA_CLAVE_MIN PAR_IZQ expresion_final PAR_DER
Rule 57    Funcion_agregada_final -> PALABRA_CLAVE_COUNT PAR_IZQ expresion_final PAR_DER
Rule 58    Funcion_agregada_final -> PALABRA_CLAVE_SUM PAR_IZQ expresion_final PAR_DER
Rule 59    expresion_final -> ID
Rule 60    expresion_final -> valores_funciones
Rule 61    expresion_final -> ID OPERADOR expresion_final
Rule 62    expresion_final -> valores_funciones OPERADOR expresion_final
Rule 63    where -> condicion_where
Rule 64    condicion_where -> ID IGUAL datos_where
Rule 65    condicion_where -> ID COMPARADOR datos_where
Rule 66    datos_where -> ID
Rule 67    datos_where -> valores
Rule 68    datos_where -> valores OPERADOR datos_where
Rule 69    datos_where -> ID OPERADOR datos_where
Rule 70    from_individual -> tabla
Rule 71    tabla -> ID
Rule 72    tabla -> ID COMA tabla
Rule 73    select_individual -> colum_indiv
Rule 74    colum_indiv -> valores
Rule 75    colum_indiv -> valores COMA colum_indiv

Terminals, with rules where they appear

CADENA               : 12
COMA                 : 15 16 21 22 23 24 27 48 49 50 72 75
COMPARADOR           : 65
DATE                 : 9
DATETIME             : 
DOUBLE               : 
FINAL                : 
ID                   : 13 15 17 17 18 20 21 21 22 24 26 27 44 46 48 51 59 61 64 65 66 69 71 72
IGUAL                : 64
INT                  : 
NUEVA_LINEA          : 
NUMERO_DECIMAL       : 11 37
NUMERO_ENTERO        : 10 36
OPERADOR             : 17 18 19 20 21 22 23 24 35 46 47 61 62 68 69
PALABRA_CLAVE_ALTER  : 
PALABRA_CLAVE_AND    : 
PALABRA_CLAVE_AS     : 
PALABRA_CLAVE_ASC    : 
PALABRA_CLAVE_AVG    : 29 39 54
PALABRA_CLAVE_BETWEEN : 
PALABRA_CLAVE_COUNT  : 32 42 57
PALABRA_CLAVE_CREATE : 
PALABRA_CLAVE_DATABASE : 
PALABRA_CLAVE_DELETE : 
PALABRA_CLAVE_DESC   : 
PALABRA_CLAVE_DROP   : 
PALABRA_CLAVE_EXISTS : 
PALABRA_CLAVE_FOREIGN : 
PALABRA_CLAVE_FROM   : 3 4 5 6 7
PALABRA_CLAVE_FULL   : 
PALABRA_CLAVE_GROUP_BY : 6 7
PALABRA_CLAVE_HAVING : 
PALABRA_CLAVE_IN     : 
PALABRA_CLAVE_INNER  : 
PALABRA_CLAVE_INSERT : 
PALABRA_CLAVE_INTO   : 
PALABRA_CLAVE_JOIN   : 
PALABRA_CLAVE_KEY    : 
PALABRA_CLAVE_LEFT   : 
PALABRA_CLAVE_LIKE   : 
PALABRA_CLAVE_LIMIT  : 
PALABRA_CLAVE_MAX    : 30 40 55
PALABRA_CLAVE_MIN    : 31 41 56
PALABRA_CLAVE_NOT    : 
PALABRA_CLAVE_NULL   : 
PALABRA_CLAVE_ON     : 
PALABRA_CLAVE_PRIMARY : 
PALABRA_CLAVE_RIGHT  : 
PALABRA_CLAVE_SELECT : 1 2 3 4 5 6 7
PALABRA_CLAVE_SET    : 
PALABRA_CLAVE_SUM    : 33 43 58
PALABRA_CLAVE_TABLE  : 
PALABRA_CLAVE_TRUNCATE : 
PALABRA_CLAVE_UNION  : 
PALABRA_CLAVE_UPDATE : 
PALABRA_CLAVE_USE    : 
PALABRA_CLAVE_VALUES : 
PALABRA_CLAVE_WHERE  : 3 7
PAR_DER              : 29 30 31 32 33 39 40 41 42 43 54 55 56 57 58
PAR_IZQ              : 29 30 31 32 33 39 40 41 42 43 54 55 56 57 58
TEXT                 : 
TIMESTAMP            : 
TINYINT              : 
TIPO_DATO            : 
VARCHAR              : 
error                : 

Nonterminals, with rules where they appear

Funcion_agregada     : 38 50 53
Funcion_agregada_final : 
Funcion_agregada_individual : 28
INFO                 : 25 27
Inicio_consultas     : 0
colum_indiv          : 73 75
columnas             : 8 15 16 21 22 23 24
condicion_where      : 63
datos_groupby        : 6 7
datos_where          : 64 65 68 69
expresion            : 39 40 41 42 43 46 47
expresion_final      : 54 55 56 57 58 61 62
expresion_individual : 29 30 31 32 33 35
from_individual      : 3 4 5 6 7
select_finales_funciones : 6 7 48 49 50
select_individual    : 1
select_individual_funciones : 2
select_intermedio    : 3 5
select_intermedio_funciones : 4
tabla                : 70 72
valores              : 14 16 18 19 19 20 22 23 23 24 49 52 67 68 74 75
valores_funciones    : 34 35 45 47 60 62
where                : 3 7

Parsing method: LALR

state 0

    (0) S' -> . Inicio_consultas
    (1) Inicio_consultas -> . PALABRA_CLAVE_SELECT select_individual
    (2) Inicio_consultas -> . PALABRA_CLAVE_SELECT select_individual_funciones
    (3) Inicio_consultas -> . PALABRA_CLAVE_SELECT select_intermedio PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_WHERE where
    (4) Inicio_consultas -> . PALABRA_CLAVE_SELECT select_intermedio_funciones PALABRA_CLAVE_FROM from_individual
    (5) Inicio_consultas -> . PALABRA_CLAVE_SELECT select_intermedio PALABRA_CLAVE_FROM from_individual
    (6) Inicio_consultas -> . PALABRA_CLAVE_SELECT select_finales_funciones PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_GROUP_BY datos_groupby
    (7) Inicio_consultas -> . PALABRA_CLAVE_SELECT select_finales_funciones PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_WHERE where PALABRA_CLAVE_GROUP_BY datos_groupby

    PALABRA_CLAVE_SELECT shift and go to state 2

    Inicio_consultas               shift and go to state 1

state 1

    (0) S' -> Inicio_consultas .



state 2

    (1) Inicio_consultas -> PALABRA_CLAVE_SELECT . select_individual
    (2) Inicio_consultas -> PALABRA_CLAVE_SELECT . select_individual_funciones
    (3) Inicio_consultas -> PALABRA_CLAVE_SELECT . select_intermedio PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_WHERE where
    (4) Inicio_consultas -> PALABRA_CLAVE_SELECT . select_intermedio_funciones PALABRA_CLAVE_FROM from_individual
    (5) Inicio_consultas -> PALABRA_CLAVE_SELECT . select_intermedio PALABRA_CLAVE_FROM from_individual
    (6) Inicio_consultas -> PALABRA_CLAVE_SELECT . select_finales_funciones PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_GROUP_BY datos_groupby
    (7) Inicio_consultas -> PALABRA_CLAVE_SELECT . select_finales_funciones PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_WHERE where PALABRA_CLAVE_GROUP_BY datos_groupby
    (73) select_individual -> . colum_indiv
    (28) select_individual_funciones -> . Funcion_agregada_individual
    (8) select_intermedio -> . columnas
    (38) select_intermedio_funciones -> . Funcion_agregada
    (48) select_finales_funciones -> . ID COMA select_finales_funciones
    (49) select_finales_funciones -> . valores COMA select_finales_funciones
    (50) select_finales_funciones -> . Funcion_agregada COMA select_finales_funciones
    (51) select_finales_funciones -> . ID
    (52) select_finales_funciones -> . valores
    (53) select_finales_funciones -> . Funcion_agregada
    (74) colum_indiv -> . valores
    (75) colum_indiv -> . valores COMA colum_indiv
    (29) Funcion_agregada_individual -> . PALABRA_CLAVE_AVG PAR_IZQ expresion_individual PAR_DER
    (30) Funcion_agregada_individual -> . PALABRA_CLAVE_MAX PAR_IZQ expresion_individual PAR_DER
    (31) Funcion_agregada_individual -> . PALABRA_CLAVE_MIN PAR_IZQ expresion_individual PAR_DER
    (32) Funcion_agregada_individual -> . PALABRA_CLAVE_COUNT PAR_IZQ expresion_individual PAR_DER
    (33) Funcion_agregada_individual -> . PALABRA_CLAVE_SUM PAR_IZQ expresion_individual PAR_DER
    (13) columnas -> . ID
    (14) columnas -> . valores
    (15) columnas -> . ID COMA columnas
    (16) columnas -> . valores COMA columnas
    (17) columnas -> . ID OPERADOR ID
    (18) columnas -> . ID OPERADOR valores
    (19) columnas -> . valores OPERADOR valores
    (20) columnas -> . valores OPERADOR ID
    (21) columnas -> . ID OPERADOR ID COMA columnas
    (22) columnas -> . ID OPERADOR valores COMA columnas
    (23) columnas -> . valores OPERADOR valores COMA columnas
    (24) columnas -> . valores OPERADOR ID COMA columnas
    (39) Funcion_agregada -> . PALABRA_CLAVE_AVG PAR_IZQ expresion PAR_DER
    (40) Funcion_agregada -> . PALABRA_CLAVE_MAX PAR_IZQ expresion PAR_DER
    (41) Funcion_agregada -> . PALABRA_CLAVE_MIN PAR_IZQ expresion PAR_DER
    (42) Funcion_agregada -> . PALABRA_CLAVE_COUNT PAR_IZQ expresion PAR_DER
    (43) Funcion_agregada -> . PALABRA_CLAVE_SUM PAR_IZQ expresion PAR_DER
    (9) valores -> . DATE
    (10) valores -> . NUMERO_ENTERO
    (11) valores -> . NUMERO_DECIMAL
    (12) valores -> . CADENA

    ID              shift and go to state 12
    PALABRA_CLAVE_AVG shift and go to state 14
    PALABRA_CLAVE_MAX shift and go to state 15
    PALABRA_CLAVE_MIN shift and go to state 16
    PALABRA_CLAVE_COUNT shift and go to state 17
    PALABRA_CLAVE_SUM shift and go to state 18
    DATE            shift and go to state 19
    NUMERO_ENTERO   shift and go to state 20
    NUMERO_DECIMAL  shift and go to state 21
    CADENA          shift and go to state 22

    select_individual              shift and go to state 3
    select_individual_funciones    shift and go to state 4
    select_intermedio              shift and go to state 5
    select_intermedio_funciones    shift and go to state 6
    select_finales_funciones       shift and go to state 7
    colum_indiv                    shift and go to state 8
    Funcion_agregada_individual    shift and go to state 9
    columnas                       shift and go to state 10
    Funcion_agregada               shift and go to state 11
    valores                        shift and go to state 13

state 3

    (1) Inicio_consultas -> PALABRA_CLAVE_SELECT select_individual .

    $end            reduce using rule 1 (Inicio_consultas -> PALABRA_CLAVE_SELECT select_individual .)


state 4

    (2) Inicio_consultas -> PALABRA_CLAVE_SELECT select_individual_funciones .

    $end            reduce using rule 2 (Inicio_consultas -> PALABRA_CLAVE_SELECT select_individual_funciones .)


state 5

    (3) Inicio_consultas -> PALABRA_CLAVE_SELECT select_intermedio . PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_WHERE where
    (5) Inicio_consultas -> PALABRA_CLAVE_SELECT select_intermedio . PALABRA_CLAVE_FROM from_individual

    PALABRA_CLAVE_FROM shift and go to state 23


state 6

    (4) Inicio_consultas -> PALABRA_CLAVE_SELECT select_intermedio_funciones . PALABRA_CLAVE_FROM from_individual

    PALABRA_CLAVE_FROM shift and go to state 24


state 7

    (6) Inicio_consultas -> PALABRA_CLAVE_SELECT select_finales_funciones . PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_GROUP_BY datos_groupby
    (7) Inicio_consultas -> PALABRA_CLAVE_SELECT select_finales_funciones . PALABRA_CLAVE_FROM from_individual PALABRA_CLAVE_WHERE where PALABRA_CLAVE_GROUP_BY datos_groupby

    PALABRA_CLAVE_FROM shift and go to state 25


state 8

    (73) select_individual -> colum_indiv .

    $end            reduce using rule 73 (select_individual -> colum_indiv .)


state 9

    (28) select_individual_funciones -> Funcion_agregada_individual .

    $end            reduce using rule 28 (select_individual_funciones -> Funcion_agregada_individual .)


state 10

    (8) select_intermedio -> columnas .

    PALABRA_CLAVE_FROM reduce using rule 8 (select_intermedio -> columnas .)


state 11

    (38) select_intermedio_funciones -> Funcion_agregada .
    (50) select_finales_funciones -> Funcion_agregada . COMA select_finales_funciones
    (53) select_finales_funciones -> Funcion_agregada .

  ! reduce/reduce conflict for PALABRA_CLAVE_FROM resolved using rule 38 (select_intermedio_funciones -> Funcion_agregada .)
    PALABRA_CLAVE_FROM reduce using rule 38 (select_intermedio_funciones -> Funcion_agregada .)
    COMA            shift and go to state 26

  ! PALABRA_CLAVE_FROM [ reduce using rule 53 (select_finales_funciones -> Funcion_agregada .) ]


state 12

    (48) select_finales_funciones -> ID . COMA select_finales_funciones
    (51) select_finales_funciones -> ID .
    (13) columnas -> ID .
    (15) columnas -> ID . COMA columnas
    (17) columnas -> ID . OPERADOR ID
    (18) columnas -> ID . OPERADOR valores
    (21) columnas -> ID . OPERADOR ID COMA columnas
    (22) columnas -> ID . OPERADOR valores COMA columnas

  ! reduce/reduce conflict for PALABRA_CLAVE_FROM resolved using rule 13 (columnas -> ID .)
    COMA            shift and go to state 27
    PALABRA_CLAVE_FROM reduce using rule 13 (columnas -> ID .)
    OPERADOR        shift and go to state 28

  ! PALABRA_CLAVE_FROM [ reduce using rule 51 (select_finales_funciones -> ID .) ]


state 13

    (49) select_finales_funciones -> valores . COMA select_finales_funciones
    (52) select_finales_funciones -> valores .
    (74) colum_indiv -> valores .
    (75) colum_indiv -> valores . COMA colum_indiv
    (14) columnas -> valores .
    (16) columnas -> valores . COMA columnas
    (19) columnas -> valores . OPERADOR valores
    (20) columnas -> valores . OPERADOR ID
    (23) columnas -> valores . OPERADOR valores COMA columnas
    (24) columnas -> valores . OPERADOR ID COMA columnas

  ! reduce/reduce conflict for PALABRA_CLAVE_FROM resolved using rule 14 (columnas -> valores .)
    COMA            shift and go to state 29
    $end            reduce using rule 74 (colum_indiv -> valores .)
    PALABRA_CLAVE_FROM reduce using rule 14 (columnas -> valores .)
    OPERADOR        shift and go to state 30

  ! PALABRA_CLAVE_FROM [ reduce using rule 52 (select_finales_funciones -> valores .) ]


state 14

    (29) Funcion_agregada_individual -> PALABRA_CLAVE_AVG . PAR_IZQ expresion_individual PAR_DER
    (39) Funcion_agregada -> PALABRA_CLAVE_AVG . PAR_IZQ expresion PAR_DER

    PAR_IZQ         shift and go to state 31


state 15

    (30) Funcion_agregada_individual -> PALABRA_CLAVE_MAX . PAR_IZQ expresion_individual PAR_DER
    (40) Funcion_agregada -> PALABRA_CLAVE_MAX . PAR_IZQ expresion PAR_DER

    PAR_IZQ         shift and go to state 32


state 16

    (31) Funcion_agregada_individual -> PALABRA_CLAVE_MIN . PAR_IZQ expresion_individual PAR_DER
    (41) Funcion_agregada -> PALABRA_CLAVE_MIN . PAR_IZQ expresion PAR_DER

    PAR_IZQ         shift and go to state 33


state 17

    (32) Funcion_agregada_individual -> PALABRA_CLAVE_COUNT . PAR_IZQ expresion_individual PAR_DER
    (42) Funcion_agregada -> PALABRA_CLAVE_COUNT . PAR_IZQ expresion PAR_DER

    PAR_IZQ         shift and go to state 34


state 18

    (33) Funcion_agregada_individual -> PALABRA_CLAVE_SUM . PAR_IZQ expresion_individual PAR_DER
    (43) Funcion_agregada -> PALABRA_CLAVE_SUM . PAR_IZQ expresion PAR_DER

    PAR_IZQ         shift and go to state 35


state 19

    (9) valores -> DATE .

    COMA            reduce using rule 9 (valores -> DATE .)
    OPERADOR        reduce using rule 9 (valores -> DATE .)
    PALABRA_CLAVE_FROM reduce using rule 9 (valores -> DATE .)
    $end            reduce using rule 9 (valores -> DATE .)
    PALABRA_CLAVE_GROUP_BY reduce using rule 9 (valores -> DATE .)


state 20

    (10) valores -> NUMERO_ENTERO .

    COMA            reduce using rule 10 (valores -> NUMERO_ENTERO .)
    OPERADOR        reduce using rule 10 (valores -> NUMERO_ENTERO .)
    PALABRA_CLAVE_FROM reduce using rule 10 (valores -> NUMERO_ENTERO .)
    $end            reduce using rule 10 (valores -> NUMERO_ENTERO .)
    PALABRA_CLAVE_GROUP_BY reduce using rule 10 (valores -> NUMERO_ENTERO .)

